--- a/index.html
+++ b/index.html
@@ -183,15 +183,15 @@
                         </div>
                         <div class="form-group">
                             <label for="txt_price">预留1</label>
-                            <input type="text" name="txt_reserve1" class="form-control" id="txt_add_reserve1" placeholder="Comment">
+                            <input type="text" name="txt_reserve1" class="form-control" id="txt_add_reserve1" placeholder="预留1">
                         </div>
                         <div class="form-group">
                             <label for="txt_price">预留2</label>
-                            <input type="text" name="txt_reserve2" class="form-control" id="txt_add_reserve2" placeholder="Comment">
+                            <input type="text" name="txt_reserve2" class="form-control" id="txt_add_reserve2" placeholder="预留2">
                         </div>
                         <div class="form-group">
                             <label for="txt_price">预留3</label>
-                            <input type="text" name="txt_reserve3" class="form-control" id="txt_add_reserve3" placeholder="Comment">
+                            <input type="text" name="txt_reserve3" class="form-control" id="txt_add_reserve3" placeholder="预留3">
                         </div>
                     </div>
                     <div class="modal-footer">
