--- a/index.html
+++ b/index.html
@@ -259,6 +259,18 @@
                             <label for="txt_price">备注</label>
                             <input type="text" name="txt_comment" class="form-control" id="txt_edit_comment" placeholder="Comment">
                         </div>
+                        <div class="form-group">
+                            <label for="txt_price">预留1</label>
+                            <input type="text" name="txt_reserve1" class="form-control" id="txt_edit_reserve1" placeholder="预留1">
+                        </div>
+                        <div class="form-group">
+                            <label for="txt_price">预留2</label>
+                            <input type="text" name="txt_reserve2" class="form-control" id="txt_edit_reserve2" placeholder="预留2">
+                        </div>
+                        <div class="form-group">
+                            <label for="txt_price">预留3</label>
+                            <input type="text" name="txt_reserve3" class="form-control" id="txt_edit_reserve3" placeholder="预留3">
+                        </div>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">
