--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
 
 <body>
     <div class="panel-body" style="padding-bottom:0px;">
+
+        <div class="panel panel-default">
+            <div class="panel-heading">欢迎你，</div>
+            <div class="panel-body">
+                    <div class="col-sm-4" style="text-align:left;">
+                            <button type="button" style="margin-left:50px" id="btn_query2" class="btn btn-primary" onclick="set_not_show();">Go</button>
+                        </div>
+            </div>
+        </div>
+
         <div class="panel panel-default">
             <div class="panel-heading">查询条件</div>
             <div class="panel-body">
