--- a/index.html
+++ b/index.html
@@ -25,11 +25,14 @@
     <div class="panel-body" style="padding-bottom:0px;">
 
         <div class="panel panel-default">
-            <div class="panel-heading">欢迎你，</div>
+            <div class="panel-heading" id="text_welcome">欢迎你，</div>
             <div class="panel-body">
                     <div class="col-sm-4" style="text-align:left;">
-                            <button type="button" style="margin-left:50px" id="btn_query2" class="btn btn-primary" onclick="set_not_show();">Go</button>
-                        </div>
+                            <button type="button" style="margin-left:50px" id="btn_query2" class="btn btn-primary" onclick="logout();">退出登录</button>
+                    </div>
+                    <div class="col-sm-4" style="text-align:left;" id="register">
+                            <button type="button" style="margin-left:50px" id="btn_query2" class="btn btn-primary" onclick="set_not_show();">注册帐号</button>
+                    </div>
             </div>
         </div>
 
