--- a/index.html
+++ b/index.html
@@ -295,6 +295,39 @@
             </div>
         </div>
     </form>
+
+    <form class="register_form">
+            <div class="modal fade" id="myModal3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                            <h4 class="modal-title" id="myModalLabel">注册帐号</h4>
+                        </div>
+                        <div class="modal-body">
+                            <div class="form-group">
+                                <label for="txt_price">用户名</label>
+                                <input type="text" name="txt_username" class="form-control" id="txt_register_username" placeholder="用户名">
+                            </div>
+                            
+                            <div class="form-group">
+                                <label for="txt_price">密码</label>
+                                <input type="text" name="txt_password" class="form-control" id="txt_register_password" placeholder="密码">
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">
+                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>Close</关闭>
+                                <button type="button" id="btn_register_submit" class="btn btn-primary">
+                                    <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>提交</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
+
 </body>
 
 </html>
