--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             <button type="button" style="margin-left:50px" id="btn_query2" class="btn btn-primary" onclick="logout();">退出登录</button>
                     </div>
                     <div class="col-sm-4" style="text-align:left;" id="register">
-                            <button type="button" style="margin-left:50px" id="btn_query2" class="btn btn-primary" onclick="set_not_show();">注册帐号</button>
+                            <button type="button" style="margin-left:50px" id="btn_register" class="btn btn-primary">注册帐号</button>
                     </div>
             </div>
         </div>
