--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
             <button id="btn_delete" type="button" class="btn btn-default">
                 <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>删除
             </button>
+            <button id="btn_edit_url" type="button" class="btn btn-default">
+                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>修改跳转链接
+            </button>
+            <button id="btn_edit_qqnumber" type="button" class="btn btn-default">
+                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>修改QQ客服
+            </button>
         </div>
         <table id="tb_departments"></table>
     </div>
