--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         <div class="panel panel-default">
             <div class="panel-heading" id="text_welcome">欢迎你，</div>
             <div class="panel-body">
-                    <div class="col-sm-4" style="text-align:left;">
-                            <button type="button" style="margin-left:50px" id="btn_query2" class="btn btn-primary" onclick="logout();">退出登录</button>
-                    </div>
-                    <div class="col-sm-4" style="text-align:left;" id="register">
-                            <button type="button" style="margin-left:50px" id="btn_register" class="btn btn-primary">注册帐号</button>
-                    </div>
+                <div class="col-sm-4" style="text-align:left;">
+                    <button type="button" style="margin-left:50px" id="btn_query2" class="btn btn-primary" onclick="logout();">退出登录</button>
+                </div>
+                <div class="col-sm-4" style="text-align:left;" id="register">
+                    <button type="button" style="margin-left:50px" id="btn_register" class="btn btn-primary">注册帐号</button>
+                </div>
             </div>
         </div>
 
@@ -60,14 +60,11 @@
             <button id="btn_edit" type="button" class="btn btn-default">
                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>修改
             </button>
+            <button id="btn_multi_update" type="button" class="btn btn-default">
+                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>批量修改
+                </button>
             <button id="btn_delete" type="button" class="btn btn-default">
                 <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>删除
-            </button>
-            <button id="btn_edit_url" type="button" class="btn btn-default">
-                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>修改跳转链接
-            </button>
-            <button id="btn_edit_qqnumber" type="button" class="btn btn-default">
-                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>修改QQ客服
             </button>
         </div>
         <table id="tb_departments"></table>
@@ -303,36 +300,87 @@
     </form>
 
     <form class="register_form">
-            <div class="modal fade" id="myModal3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                            <h4 class="modal-title" id="myModalLabel">注册帐号</h4>
+        <div class="modal fade" id="myModal3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <h4 class="modal-title" id="myModalLabel">注册帐号</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label for="txt_price">用户名</label>
+                            <input type="text" name="txt_username" class="form-control" id="txt_register_username" placeholder="用户名">
                         </div>
-                        <div class="modal-body">
-                            <div class="form-group">
-                                <label for="txt_price">用户名</label>
-                                <input type="text" name="txt_username" class="form-control" id="txt_register_username" placeholder="用户名">
-                            </div>
-                            
-                            <div class="form-group">
-                                <label for="txt_price">密码</label>
-                                <input type="text" name="txt_password" class="form-control" id="txt_register_password" placeholder="密码">
-                            </div>
+
+                        <div class="form-group">
+                            <label for="txt_price">密码</label>
+                            <input type="text" name="txt_password" class="form-control" id="txt_register_password" placeholder="密码">
                         </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">
-                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>Close</关闭>
-                                <button type="button" id="btn_register_submit" class="btn btn-primary">
-                                    <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>提交</button>
-                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">
+                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>Close</关闭>
+                            <button type="button" id="btn_register_submit" class="btn btn-primary">
+                                <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>提交</button>
                     </div>
                 </div>
             </div>
-        </form>
+        </div>
+    </form>
+
+    <form class="update_url_form">
+        <div class="modal fade" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <h4 class="modal-title" id="myModalLabel">批量修改跳转链接</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label for="txt_price">跳转链接</label>
+                            <input type="text" name="txt_multi_update_url" class="form-control" id="txt_multi_update_url" placeholder="跳转链接">
+                        </div>
+
+                        <div class="form-group">
+                                <label for="txt_price">QQ客服</label>
+                                <input type="text" name="txt_multi_update_qqnumber" class="form-control" id="txt_multi_update_qqnumber" placeholder="QQ客服">
+                        </div>
+
+                        <div class="form-group">
+                                <label for="txt_quantity">是否跳转</label>
+                                <br>
+                                <label class="radio-inline">
+                                    <input type="radio" name="multi_update_show" id="optradio_multi_update_show_yes" value="Yes"> Yes
+                                </label>
+                                <label class="radio-inline">
+                                    <input type="radio" name="multi_update_show" id="optradio_multi_update_show_false" value="No"> No
+                                </label>
+                        </div>
+                        <div class="form-group">
+                                <label for="txt_price">轮播图</label>
+                                <input type="text" name="milti_update_imagelist" class="form-control" id="txt_milti_update_imagelist" placeholder="以;隔开">
+                        </div>
+                        <div class="form-group">
+                                <label for="txt_price">跑马灯</label>
+                                <input type="text" name="multi_update_marqueeContent" class="form-control" id="txt_multi_update_marqueeContent" placeholder="欢迎使用本软件">
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">
+                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>Close</关闭>
+                            <button type="button" id="btn_register_submit" class="btn btn-primary">
+                                <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>提交</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
 
 </body>
 
