--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
-                        <h4 class="modal-title" id="myModalLabel">批量修改跳转链接</h4>
+                        <h4 class="modal-title" id="myModalLabel">批量修改(值为空则不修改)</h4>
                     </div>
                     <div class="modal-body">
                         <div class="form-group">
@@ -374,7 +374,7 @@
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">
                             <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>Close</关闭>
-                            <button type="button" id="btn_register_submit" class="btn btn-primary">
+                            <button type="button" id="btn_multi_update_submit" class="btn btn-primary">
                                 <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>提交</button>
                     </div>
                 </div>
