--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
         </div>
     </form>
 
-    <form class="update_url_form">
+    <form class="update_multi_form">
         <div class="modal fade" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
@@ -372,6 +372,18 @@
                         <div class="form-group">
                                 <label for="txt_price">跑马灯</label>
                                 <input type="text" name="multi_update_marqueeContent" class="form-control" id="txt_multi_update_marqueeContent" placeholder="欢迎使用本软件">
+                        </div>
+                        <div class="form-group">
+                            <label for="txt_price">预留1</label>
+                            <input type="text" name="txt_multi_update_reserve1" class="form-control" id="txt_multi_update_reserve1" placeholder="预留1">
+                        </div>
+                        <div class="form-group">
+                            <label for="txt_price">预留2</label>
+                            <input type="text" name="txt_multi_update_reserve2" class="form-control" id="txt_multi_update_reserve2" placeholder="预留2">
+                        </div>
+                        <div class="form-group">
+                            <label for="txt_price">预留3</label>
+                            <input type="text" name="txt_multi_update_reserve3" class="form-control" id="txt_multi_update_reserve3" placeholder="预留3">
                         </div>
                     </div>
                     <div class="modal-footer">
